--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -1,17 +1,87 @@
-body, html {
+body{
+    margin: 0px;
+    align-self: center;
+    background-color:#ECDFCC;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+    
+}
+
+header{
+    background-color: #1E201E;
+    margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px;
+}
+
+.quemsomos {
+    position: relative;
     width: 100%;
-    height: 100%;
-    margin: 0;
-    background-color: rgb(170, 170, 170);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    height: 1000px;
+    background-color: #ECDFCC;
+    margin: 0px auto;
+    
+
+  }
+  
+.quemsomos:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    width: 85%;
+    height: 98%;
+    opacity: 0.7;
+    background-image: url(/imgs/loja.png);
+    background-repeat: no-repeat;
+    background-position: 50% 25%;
+    background-size: cover;
+    border: 19px solid red;
+    
+    
+  }
+  
+  .quemsomosconteudo{
+    position: relative;
+    display: flex;
   }
 
 section{
     display: flex;
+    width: 100;
+    gap: 10px;
+    align-items: center;
+    margin: 20px;
 }
 
-header{
-    width: 100%;
-    height: 100px;
-    border-collapse: collapse;
+.item{
+    flex-grow: 1;
+    background-color:#e3e3e3;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    display: block;
+    text-align: center;
+}
+
+.item:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img{
+    border-radius: 5px 5px 0 0;
+    max-width: 500px;
+    max-height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+p{
+    margin: 0px;
 }
