--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -7,47 +7,39 @@ body{
 }
 
 header{
-    background-color: #1E201E;
+    background-color: #F4CE14;
     margin: 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 40px;
+    height: 75px;
+    
 }
 
-.quemsomos {
-    position: relative;
-    width: 100%;
-    height: 1000px;
-    background-color: #ECDFCC;
-    margin: 0px auto;
-    
+.img-header{
+    height: 75px;
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+}
 
-  }
-  
-.quemsomos:before {
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    width: 85%;
-    height: 98%;
-    opacity: 0.7;
-    background-image: url(/imgs/loja.png);
-    background-repeat: no-repeat;
-    background-position: 50% 25%;
-    background-size: cover;
-    border: 19px solid red;
-    
-    
-  }
-  
-  .quemsomosconteudo{
+.container{
     position: relative;
-    display: flex;
-  }
+    text-align: center;
+    color: white;
+    height: 1000px;
+    width: 1000px;
+}
+
+.img-loja{
+    object-fit: contain;
+    opacity: 0.5;
+    height: auto;
+    width: 100%
+}
+
 
 section{
     display: flex;
