--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -26,18 +26,32 @@ header{
 }
 
 .container{
-    position: relative;
     text-align: center;
-    color: white;
-    height: 1000px;
-    width: 1000px;
+    width: 100%;
+    display: inline-block;
+    position: relative;
+    
 }
 
 .img-loja{
-    object-fit: contain;
+    margin-top: 25px;
     opacity: 0.5;
+    width: 95%;
     height: auto;
-    width: 100%
+    box-shadow: 0 0 4px 4px #888888a6;
+    border-radius: 0.5%;
+
+}
+.card-direita{
+    position: absolute;
+    top: 25%;
+    left: 25%
+}
+
+.texto-esquerda{
+    position: absolute;
+    top: 25%;
+    left: 75%
 }
 
 
@@ -64,7 +78,7 @@ section{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-img{
+img.item{
     border-radius: 5px 5px 0 0;
     max-width: 500px;
     max-height: 500px;
